--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -17,6 +17,9 @@
     "pinia": "^2.1.7"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.1"
+    "@nuxtjs/tailwindcss": "^6.12.1",
+    "@volar/typescript": "^1.11.1",
+    "typescript": "^5.3.0",
+    "vue-tsc": "~2.2.10"
   }
 }
