--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -15,11 +15,13 @@
     "@tanstack/vue-table": "^8.21.3",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.4.0",
+    "@vueuse/nuxt": "^13.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-vue": "^8.6.0",
     "lucide-vue-next": "^0.518.0",
     "nuxt": "^3.17.5",
+    "nuxt-lucide-icons": "^1.0.5",
     "pinia": "^2.1.7",
     "reka-ui": "^2.3.1",
     "shadcn-nuxt": "2.2.0",
@@ -29,12 +31,14 @@
     "vaul-vue": "^0.4.1",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.16",
+    "vue-confetti-explosion": "^1.0.2",
     "vue-router": "^4.5.1",
     "vue-sonner": "^2.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@volar/typescript": "^1.11.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vue-tsc": "^2.2.10"
   }
 }
