--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare && prisma generate"
   },
   "dependencies": {
+    "@nuxtjs/color-mode": "^3.5.2",
     "@pinia/nuxt": "^0.5.1",
     "@prisma/client": "^6.6.0",
     "@tailwindcss/vite": "^4.1.10",
@@ -20,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-vue": "^8.6.0",
+    "html2canvas": "^1.4.1",
     "lucide-vue-next": "^0.518.0",
     "nuxt": "^3.17.5",
     "nuxt-lucide-icons": "^1.0.5",
@@ -35,8 +37,7 @@
     "vue-confetti-explosion": "^1.0.2",
     "vue-router": "^4.5.1",
     "vue-sonner": "^2.0.0",
-    "zod": "^3.23.8",
-    "html2canvas": "^1.4.1"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@volar/typescript": "^1.11.1",
